--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - AWS_ACCOUNT_ID=$(echo $CODEBUILD_BUILD_ARN | cut -d ':' -f5)
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
-      - REPOSITORY_URI=[[450555085543.dkr.ecr.ap-southeast-2.amazonaws.com/awsbuilders-dotnet]]
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin 450555085543.dkr.ecr.ap-southeast-2.amazonaws.com/awsbuilders-dotnet
+      - REPOSITORY_URI=450555085543.dkr.ecr.ap-southeast-2.amazonaws.com/awsbuilders-dotnet
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
